<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="google_app_id">233735259795</string>

    <string name="app_name">FoodNote</string>
    <string name="done_string">Done:</string>
    <string name="date_string">Date:</string>
    <string name="add_new_recipe_string">Add New Recipe</string>
    <string name="title_string">Recipe Title</string>
    <string name="description_string">Recipe Description</string>
    <string name="enter_description_string">Enter description</string>
    <string name="ingredients_string">Ingredients (separated by commas)</string>
    <string name="ingredients_prefix_string">Ingredients:</string>
    <string name="enter_ingredients_string">Enter ingredients</string>
    <string name="steps_string">Steps</string>
    <string name="enter_string">Enter</string>
    <string name="not_done_string">Not Done</string>
    <string name="priority_low_string">Low</string>
    <string name="priority_medium_string">Medium</string>
    <string name="priority_high_string">High</string>
    <string name="time_and_date_string">Time and Date</string>
    <string name="no_date_set_string">0000-00-00</string>
    <string name="no_time_set_string">00:00:00</string>
    <string name="choose_date_string">Choose Date</string>
    <string name="choose_time_string">Choose Time</string>
    <string name="cancel_string">Cancel</string>
    <string name="hide_string">Hide</string>
    <string name="submit_string">Submit</string>
    <string name="close_string">Close</string>
    <string name="edit_string">Edit</string>
    <string name="enter_title_string">Enter Title</string>
    <string name="picture_string">Picture</string>
    <string name="delete_string">Delete</string>
    <string name="recipe_book">Recipe Book</string>
    <string name="recipe_world">Recipe World</string>
    <string name="browse_recipe_book">Browse Recipe Book</string>
    <string name="browse_recipe_world">Browse Recipe World</string>
    <string name="upload_to_recipe_world_option">Also upload to Recipe World</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="account_pick_string">Please choose the account you want to associate with.</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
