<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

   <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:background="@drawable/rigatoni"
        tools:context="com.example.foodnote.FullscreenActivity" >
            <!-- The primary full-screen view. This can be replaced with whatever view
                 is needed to present your content, e.g. VideoView, SurfaceView,
                 TextureView, etc. -->
            <TextView android:id="@+id/fullscreen_content" android:layout_width="match_parent"
                android:layout_height="match_parent" android:keepScreenOn="false" android:textColor="#33b5e5"
                android:textStyle="bold" android:textSize="50sp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/dummy_content" />
            <!-- This FrameLayout insets its children based on system windows using
                 android:fitsSystemWindows. -->
            <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:fitsSystemWindows="true" >
                    <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:orientation="horizontal">

                        <Button android:id="@+id/list_button" style="?metaButtonBarButtonStyle"
                            android:layout_width="wrap_content" android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="#00000000"
                            android:drawableTop="@drawable/configure"
                            android:onClick="goToList"/>
                    </LinearLayout>
            </FrameLayout>
    </FrameLayout>

    <!-- Set left margin to -60 for the drawer to occupy full width-->
    <RelativeLayout
        android:id="@+id/drawer_right"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:layout_marginLeft="-60dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/drawer_scroll_view"
            android:layout_width="match_parent" android:layout_height="match_parent">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/RecipeAddLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:clickable="true"
                android:onClick="onAddRecipeBackgroundClicked">

                <!-- Title -->

                <TextView
                    android:id="@+id/TitleLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_string"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <EditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/TitleLabel"
                    android:layout_marginTop="14dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="2dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:background="@drawable/short_edittext_shape"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"
                    android:ems="10"
                    android:hint="@string/enter_title_string"
                    android:inputType="textShortMessage"
                    android:textAppearance="?android:attr/textAppearanceLarge">

                    <requestFocus />
                </EditText>

                <!-- Description -->

                <TextView
                    android:id="@+id/descriptionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/title"
                    android:layout_marginTop="25dp"
                    android:text="@string/description_string"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/descriptionTitle"
                    android:layout_marginTop="14dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="2dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:background="@drawable/short_edittext_shape"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"
                    android:ems="10"
                    android:hint="@string/enter_description_string"
                    android:inputType="textMultiLine"
                    android:textAppearance="?android:attr/textAppearanceLarge">
                </EditText>

                <!-- Ingredients -->

                <TextView
                    android:id="@+id/ingredientsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/description"
                    android:layout_marginTop="25dp"
                    android:text="@string/ingredients_string"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/ingredientsTitle"
                    android:layout_marginTop="14dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="2dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:background="@drawable/short_edittext_shape"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"
                    android:ems="10"
                    android:hint="@string/enter_ingredients_string"
                    android:inputType="textMultiLine"
                    android:textAppearance="?android:attr/textAppearanceLarge">
                </EditText>

                <!-- Buttons -->

                <Button
                    android:id="@+id/hideButton"
                    android:textColor="#FFFFFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/ingredients"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/button_shape"
                    android:text="@string/hide_string"
                    android:onClick="onHideButtonClicked" />

                <Button
                    android:id="@+id/cancelButton"
                    android:textColor="#FFFFFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/ingredients"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/button_shape"
                    android:text="@string/cancel_string"
                    android:onClick="onCancelButtonClicked"/>

                <Button
                    android:id="@+id/submitButton"
                    android:textColor="#FFFFFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/ingredients"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/button_shape"
                    android:text="@string/submit_string" />

            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>